--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,26 @@
     max-width: 1100px;
 }
 
+ul {
+    list-style: none;
+}
+
 /* TITLE */
 .gradient-bg {
   background: linear-gradient(90deg, #a18cd1 0%, #fbc2eb 100%);
   color: #222;
   box-shadow: 0 2px 16px rgba(161, 140, 209, 0.15);
+}
+
+/* TASK */
+.task-item {
+  margin-bottom: 0.5rem;
+}
+
+.task-text {
+  margin-left: 0.5rem;
+}
+
+.task-completed {
+  text-decoration: line-through;
 }
