fix: component union

--- a/angular-todo/src/app/components/header/header.component.html
+++ b/angular-todo/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-body-secondary">
+<header class="header">
 <h3 class="py-4 text-center">⏲️ Tempo trascorso: {{ timer }} secondi ⏲️</h3>
 </header>
 
