--- a/angular-todo/src/app/app.component.html
+++ b/angular-todo/src/app/app.component.html
@@ -4,6 +4,6 @@
   <h1 class="my-4 text-center text-success">Attività della settimana</h1>
 
   <div class="gradient-container p-4 rounded shadow">
-    <app-tasks></app-tasks>
+      <router-outlet></router-outlet>
   </div>
 </div>
