--- a/angular-todo/src/app/components/login/login.component.html
+++ b/angular-todo/src/app/components/login/login.component.html
@@ -1,9 +1,22 @@
-<div class="login-container">
+<div class="login-input">
   <h2>Login</h2>
-  <form (ngSubmit)="login()">
-    <input [(ngModel)]="username" name="username" placeholder="Username" required>
-    <input [(ngModel)]="password" name="password" type="password" placeholder="Password" required>
-    <button type="submit">Login</button>
+  <form (ngSubmit)="login()">  
+    <input
+      type="text"
+      [(ngModel)]="username"
+      name="username"
+      placeholder="Username"
+      required
+    />
+    <input
+      type="password"
+      [(ngModel)]="password"
+      name="password"
+      placeholder="Password"
+      required
+    />
+    <button type="submit" class="btn-add">Login</button>
   </form>
   <div *ngIf="error" class="text-danger mt-2">Credenziali errate</div>
 </div>
+
