--- a/angular-todo/src/app/components/tasks/tasks.component.html
+++ b/angular-todo/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,7 @@
 <!-- onSubmit esegue il metodo quando il form viene inviato  -->
  
 <div class="task-input">
+    <h1 class="text-center mb-3">Lista delle attività</h1>
   <form (ngSubmit)="onSubmit()">  
     <input
       type="text"
